Changes in version 2025.7.30 (PR#35)

- proj_compute_mpi() launches a SLURM MPI job in which each task computes a variable number of results.
- proj_test() for running one CV iteration with down-sampling.
- proj_fread() for reading all CSV results.
- New Learners AutoTunerTorch_epochs, LearnerRegrCVGlmnetSave, LearnerClassifCVGlmnetSave, with special methods for proj_* functions: save_learner and edit_learner.

Changes in version 2025.6.23

- proj_* functions for SLURM load balancing (PR#32).

Changes in version 2025.5.21

- ResamplingBase inherits from mlr3::Resampling (PR#31, thanks Sebastian Fischer).

Changes in version 2025.5.17

- ResamplingBase defines instantiate() which now saves task hash (PR#26, thanks Marc Becker); sub-classes define get_instance().

Changes in version 2025.3.30

- new plot() method for score().
- pvalue() with plot() method.
- ResamplingSameOtherSizesCV gains subsets parameter which specifies which subsets to use for training: S, O, A, SO, SA, SOA (S=same, O=other, A=All).

Changes in version 2024.10.28

- .onLoad, add mlr3resampling to mlr3_reflections$loaded_packages, thanks @be-marc for the idea, https://github.com/tdhock/mlr3resampling/issues/17

Changes in version 2024.10.22

- update docs, group -> subset.

Changes in version 2024.9.6

- .onLoad, add subset to mlr3_reflections$task_col_roles for classif and regr.

Changes in version 2024.7.14

- fix typo newere in vignette.

Changes in version 2024.7.7

- use purl=FALSE in vignettes to avoid CRAN check error.

Changes in version 2024.7.3

- use mlr3tuning::tnr("grid_search") instead of TunerGridSearch in Newer_resamplers vignette (same functionality, new name is TunerBatchGridSearch).
- fix Rd files Task -> mlr3:Task, rm ResamplingHoldout etc.

Changes in version 2024.5.14

- mlr3misc::leanify_package() and add ResamplingSameOtherSizesCV to mlr_resamplings as same_other_sizes_cv, thanks @sebffischer.

Changes in version 2024.5.13
