@@ -3,7 +3,7 @@ AutoTunerTorch_epochs = R6::R6Class(
   inherit = mlr3tuning::AutoTuner,
   public = list(
     module_learner=NULL,
-    initialize=function(id, module_generator, max_epochs, batch_size, measure_list, validate=0.5){
+    initialize=function(id, max_epochs, measure_list, validate=0.5, ...){
       if(!is.list(measure_list)){
         measure_list <- list(measure_list)
       }
@@ -11,14 +11,13 @@ AutoTunerTorch_epochs = R6::R6Class(
       task_type <- sub("[.].*", "", M$id)
       self$module_learner = mlr3::lrn( 
         paste0(task_type, ".module"),
-        module_generator = module_generator,
         ingress_tokens = list(x = mlr3torch::ingress_num()),
         epochs = paradox::to_tune(upper=max_epochs, internal=TRUE),
         patience = max_epochs,
-        batch_size = batch_size,
         measures_valid=measure_list,
         measures_train=measure_list,
-        callbacks = mlr3torch::t_clbk("history"))
+        callbacks = mlr3torch::t_clbk("history"),
+        ...)
       if(task_type=="classif")self$module_learner$predict_type <- "prob"
       mlr3::set_validate(self$module_learner, validate = validate)
       terminator <- mlr3tuning::mlr_terminators$get("evals")
