@@ -1,7 +1,8 @@
 Changes in version 2025.7.30 (PR#35)
 
+- proj_grid() outputs tasks and resamplings sub-directories, instead of saving these data to the grid.rds file.
 - proj_compute_mpi() launches a SLURM MPI job in which each task computes a variable number of results.
-- proj_test() for running one CV iteration with down-sampling.
+- proj_test() for running one CV iteration, on down-sampled Tasks, using edited Learners. 
 - proj_fread() for reading all CSV results.
 - New Learners AutoTunerTorch_epochs, LearnerRegrCVGlmnetSave, LearnerClassifCVGlmnetSave, with special methods for proj_* functions: save_learner and edit_learner.
 
